On branch next-js fixed side menu not closing on mobile Changes to be committed: 	modified:   src/app/(main)/(public)/assets/MediaQueries/accordionmenu.css

--- a/src/app/(main)/(public)/assets/MediaQueries/accordionmenu.css
+++ b/src/app/(main)/(public)/assets/MediaQueries/accordionmenu.css
@@ -12,7 +12,7 @@
 
 .accordion_menu.active {
   background: var(--clr-slate-dflt);
-  z-index: 10;
+  z-index: 40;
   width: 100%;
   top: 0;
   z-index: 12;
